# floatingList

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/floatingList/: FloatingList.py  FloatingList.py~
